--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
             </div>
             <div class="benefit-item">
                 <div class="benefit-icon">💰</div>
-                <div class="benefit-title">Pencairan s.d.<br>Rp 500 Jt</div>
+                <div class="benefit-title">Pencairan s.d.<br>Rp 5 M</div>
             </div>
             <div class="benefit-item">
                 <div class="benefit-icon">📅</div>
@@ -438,7 +438,7 @@
             </div>
             <div class="benefit-item">
                 <div class="benefit-icon">🛡️</div>
-                <div class="benefit-title">Terpercaya<br>Bagian dari Astra</div>
+                <div class="benefit-title">Terpercaya<br>Sejak 1982</div>
             </div>
             <div class="benefit-item">
                 <div class="benefit-icon">⚡</div>
@@ -447,7 +447,7 @@
             </div>
             <div class="benefit-item">
                 <div class="benefit-icon">🏠</div>
-                <div class="benefit-title">Penggunaan Mudah</div>
+                <div class="benefit-title">Solusi Dana Fleksibel</div>
                 <div class="benefit-desc">Untuk segala kebutuhan</div>
             </div>
         </div>
@@ -466,16 +466,16 @@
 
     <!-- SLIDER: TESTIMONI -->
     <section class="section">
-        <h2 class="section-title" style="text-align: left;">Cerita Pengguna</h2>
+        <h2 class="section-title" style="text-align: left;">Apa Kata Mereka</h2>
         <div class="slider-container" id="testiSlider">
             <div class="slider-wrapper">
                 <!-- Slide 1 -->
                 <div class="slider-slide">
                     <div class="testi-card">
                         <div class="star-rating">★★★★★</div>
-                        <h3 style="margin-top: 5px; font-size: 16px;">"Solusi Mobil yang Terbukti Aman"</h3>
+                        <h3 style="margin-top: 5px; font-size: 16px;">"Solusi Dana yang Terbukti Aman"</h3>
                         <p class="testi-text">Butuh modal? Langsung aja ke GadaiBPKBmobil.com. Prosesnya mudah, cepat, dan pastinya aman karena dari Astra.</p>
-                        <div class="user-info">Joko Susilo<br><span style="font-weight: normal; color: #999;">Wiraswasta, Jakarta</span></div>
+                        <div class="user-info">Joko Susilo<br><span style="font-weight: normal; color: #999;">Wiraswasta, Semarang</span></div>
                     </div>
                 </div>
                 <!-- Slide 2 -->
