--- a/index.html
+++ b/index.html
@@ -434,11 +434,13 @@
             </div>
             <div class="benefit-item">
                 <div class="benefit-icon">📅</div>
-                <div class="benefit-title">Tenor s.d.<br>48 Bulan</div>
+                <div class="benefit-title">Tenor s.d.</div>
+                <br>48 bulan dan 60 bulan</div>
             </div>
             <div class="benefit-item">
                 <div class="benefit-icon">🛡️</div>
-                <div class="benefit-title">Terpercaya<br>Sejak 1982</div>
+                <div class="benefit-title">Terpercaya</div>
+                <div class="benefit-desc">Aman dan resmi sejak 1982</div>
             </div>
             <div class="benefit-item">
                 <div class="benefit-icon">⚡</div>
@@ -447,7 +449,7 @@
             </div>
             <div class="benefit-item">
                 <div class="benefit-icon">🏠</div>
-                <div class="benefit-title">Solusi Dana Fleksibel</div>
+                <div class="benefit-title">Dana Fleksibel</div>
                 <div class="benefit-desc">Untuk segala kebutuhan</div>
             </div>
         </div>
