--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
             <div class="benefit-item">
                 <div class="benefit-icon">📅</div>
                 <div class="benefit-title">Tenor s.d.</div>
-                <br>48 bulan dan 60 bulan</div>
+                <div class="benefit-desc">48 bulan dan 60 bulan</div>
             </div>
             <div class="benefit-item">
                 <div class="benefit-icon">🛡️</div>
