--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
     </section>
 
     <section class="section">
-        <h2 class="section-title">Keuntungan Solusi Dana BPKB</h2>
+        <h2 class="section-title">Pencairan Maksimal, Proses Minimal</h2>
         <div class="benefits-grid">
             <div class="benefit-item">
                 <div class="benefit-icon">🌸</div>
@@ -691,7 +691,7 @@
             <div class="footer-logo-box" style="width: 80px; height: 40px;"></div>
         </div>
         <p style="margin-bottom: 15px;">Pengajuan pinjaman diproses berdasarkan kriteria kredit yang berlaku. GadaiBPKBmobil.com adalah mitra resmi
-            dari lembaga pembiayaan yang terdaftar di OJK.Dengan menggunakan layanan ini, Anda menyetujui pengolahan data sesuai Kebijakan Privasi.</p>
+            dari lembaga pembiayaan yang terdaftar di OJK. Dengan menggunakan layanan ini, Anda menyetujui pengolahan data sesuai Kebijakan Privasi.</p>
         
         <div class="footer-links">
             <a href="#">Tentang Kami</a>
