--- a/index.html
+++ b/index.html
@@ -433,6 +433,14 @@
                 <div class="benefit-title">Pencairan s.d.<br>Rp 5 M</div>
             </div>
             <div class="benefit-item">
+                <div class="benefit-icon">🌸</div>
+                <div class="benefit-title">Bunga Mulai<br>0.79%/bln</div>
+            </div>
+            <div class="benefit-item">
+                <div class="benefit-icon">💰</div>
+                <div class="benefit-title">Pencairan s.d.<br>Rp 5 M</div>
+            </div>
+            <div class="benefit-item">
                 <div class="benefit-icon">📅</div>
                 <div class="benefit-title">Tenor s.d.</div>
                 <div class="benefit-desc">48 bulan dan 60 bulan</div>
