--- a/index.html
+++ b/index.html
@@ -426,23 +426,27 @@
         <div class="benefits-grid">
             <div class="benefit-item">
                 <div class="benefit-icon">🌸</div>
-                <div class="benefit-title">Bunga Mulai<br>0.79%/bln</div>
+                <div class="benefit-title">Bunga Rendah</div>
+                <div class="benefit-desc">Mulai 0.79%/bln</div>
             </div>
             <div class="benefit-item">
                 <div class="benefit-icon">💰</div>
-                <div class="benefit-title">Pencairan s.d.<br>Rp 5 M</div>
+                <div class="benefit-title">Pencairan s.d.</div>
+                <div class="benefit-desc">Rp 5 M proses kilat</div>
             </div>
             <div class="benefit-item">
                 <div class="benefit-icon">🌸</div>
-                <div class="benefit-title">Bunga Mulai<br>0.79%/bln</div>
+                <div class="benefit-title">Pinjaman Maks</div>
+                <div class="benefit-desc">Hingga 95% dari nilai kendaraan</div>
             </div>
             <div class="benefit-item">
                 <div class="benefit-icon">💰</div>
-                <div class="benefit-title">Pencairan s.d.<br>Rp 5 M</div>
+                <div class="benefit-title">Jaminan BPKB</div>
+                <div class="benefit-desc">Kendaraan tetap bebas Anda pakai</div>
             </div>
             <div class="benefit-item">
                 <div class="benefit-icon">📅</div>
-                <div class="benefit-title">Tenor s.d.</div>
+                <div class="benefit-title">Tenor Fleksibel s.d.</div>
                 <div class="benefit-desc">48 bulan dan 60 bulan</div>
             </div>
             <div class="benefit-item">
