--- a/index.html
+++ b/index.html
@@ -435,24 +435,24 @@
                 <div class="benefit-desc">Rp 5 M proses kilat</div>
             </div>
             <div class="benefit-item">
-                <div class="benefit-icon">🌸</div>
+                <div class="benefit-icon">🔝</div>
                 <div class="benefit-title">Pinjaman Maks</div>
                 <div class="benefit-desc">Hingga 95% dari nilai kendaraan</div>
             </div>
             <div class="benefit-item">
-                <div class="benefit-icon">💰</div>
-                <div class="benefit-title">Jaminan BPKB</div>
+                <div class="benefit-icon">✔️</div>
+                <div class="benefit-title">Cukup BPKB</div>
                 <div class="benefit-desc">Kendaraan tetap bebas Anda pakai</div>
             </div>
             <div class="benefit-item">
                 <div class="benefit-icon">📅</div>
                 <div class="benefit-title">Tenor Fleksibel s.d.</div>
-                <div class="benefit-desc">48 bulan dan 60 bulan</div>
+                <div class="benefit-desc">48 bulan dan bisa topup</div>
             </div>
             <div class="benefit-item">
                 <div class="benefit-icon">🛡️</div>
                 <div class="benefit-title">Terpercaya</div>
-                <div class="benefit-desc">Aman dan resmi sejak 1982</div>
+                <div class="benefit-desc">Terdaftar dan diawasi oleh OJK</div>
             </div>
             <div class="benefit-item">
                 <div class="benefit-icon">⚡</div>
@@ -460,7 +460,7 @@
                 <div class="benefit-desc">Data lengkap, cair cepat</div>
             </div>
             <div class="benefit-item">
-                <div class="benefit-icon">🏠</div>
+                <div class="benefit-icon">✨</div>
                 <div class="benefit-title">Dana Fleksibel</div>
                 <div class="benefit-desc">Untuk segala kebutuhan</div>
             </div>
