--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
                     <div class="testi-card">
                         <div class="star-rating">★★★★★</div>
                         <h3 style="margin-top: 5px; font-size: 16px;">"Solusi Dana yang Terbukti Aman"</h3>
-                        <p class="testi-text">Butuh modal? Langsung aja ke GadaiBPKBmobil.com. Prosesnya mudah, cepat, dan pastinya aman karena dari Astra.</p>
+                        <p class="testi-text">Butuh modal? Langsung aja ke GadaiBPKBmobil.com. Prosesnya mudah, cepat, dan pastinya aman karena dari BFI.</p>
                         <div class="user-info">Joko Susilo<br><span style="font-weight: normal; color: #999;">Wiraswasta, Semarang</span></div>
                     </div>
                 </div>
