--- a/index.html
+++ b/index.html
@@ -115,18 +115,18 @@
                         <div class="partner-marquee-container">
                             <div class="partner-marquee">
                                 <div class="partner-item">🏢 Adira Finance</div>
-                                <div class="partner-item">🏢 BCA Finance</div>
-                                <div class="partner-item">🏢 Mandiri Tunas Finance</div>
                                 <div class="partner-item">🏢 BFI Finance</div>
+                                <div class="partner-item">🏢 Mandiri Tunas Finance</div>
                                 <div class="partner-item">🏢 Mega Auto Finance</div>
-                                <div class="partner-item">🏢 WOM Finance</div>
+                                <div class="partner-item">🏢 Clipan Finance</div>
+                                <div class="partner-item">🏢 Smart Finance</div>
                                 <!-- Duplicate for seamless loop -->
-                                <div class="partner-item">🏢 Adira Finance</div>
-                                <div class="partner-item">🏢 BCA Finance</div>
-                                <div class="partner-item">🏢 Mandiri Tunas Finance</div>
-                                <div class="partner-item">🏢 BFI Finance</div>
-                                <div class="partner-item">🏢 Mega Auto Finance</div>
                                 <div class="partner-item">🏢 WOM Finance</div>
+                                <div class="partner-item">🏢 NSC Finance</div>
+                                <div class="partner-item">🏢 MNC Finance</div>
+                                <div class="partner-item">🏢 Mizuho Finance</div>
+                                <div class="partner-item">🏢 Kreditplus Finance</div>
+                                <div class="partner-item">🏢 MOFI Finance</div>
                             </div>
                         </div>
                     </div>
