--- a/index.html
+++ b/index.html
@@ -115,18 +115,18 @@
                         <div class="partner-marquee-container">
                             <div class="partner-marquee">
                                 <div class="partner-item">🏢 Adira Finance</div>
-                                <div class="partner-item">🏢 BFI Finance</div>
+                                <div class="partner-item">🏢 BCA Finance</div>
                                 <div class="partner-item">🏢 Mandiri Tunas Finance</div>
+                                <div class="partner-item">🏢 BFI Finance</div>
                                 <div class="partner-item">🏢 Mega Auto Finance</div>
-                                <div class="partner-item">🏢 Clipan Finance</div>
-                                <div class="partner-item">🏢 Smart Finance</div>
-                                <!-- Duplicate for seamless loop -->
                                 <div class="partner-item">🏢 WOM Finance</div>
-                                <div class="partner-item">🏢 NSC Finance</div>
-                                <div class="partner-item">🏢 MNC Finance</div>
-                                <div class="partner-item">🏢 Mizuho Finance</div>
-                                <div class="partner-item">🏢 Kreditplus Finance</div>
-                                <div class="partner-item">🏢 MOFI Finance</div>
+                                <!-- Duplicate for seamless loop -->
+                                <div class="partner-item">🏢 Adira Finance</div>
+                                <div class="partner-item">🏢 BCA Finance</div>
+                                <div class="partner-item">🏢 Mandiri Tunas Finance</div>
+                                <div class="partner-item">🏢 BFI Finance</div>
+                                <div class="partner-item">🏢 Mega Auto Finance</div>
+                                <div class="partner-item">🏢 WOM Finance</div>
                             </div>
                         </div>
                     </div>
@@ -447,7 +447,7 @@
             <div class="benefit-item">
                 <div class="benefit-icon">📅</div>
                 <div class="benefit-title">Tenor Fleksibel s.d.</div>
-                <div class="benefit-desc">48 bulan dan bisa top up</div>
+                <div class="benefit-desc">48 bulan dan bisa topup</div>
             </div>
             <div class="benefit-item">
                 <div class="benefit-icon">🛡️</div>
@@ -623,11 +623,10 @@
 
             <div class="form-group">
                 <label class="form-label">Domisili Saat Ini (Kecamatan) <span class="required">*</span></label>
-                <div class="search-container">
-                    <input type="text" class="search-input" name="kecamatan" id="kecamatanSearch" placeholder="Cari kecamatan..." required>
-                    <span class="search-icon">🔍</span>
-                    <div class="search-results" id="searchResults"></div>
-                </div>
+                <input type="text" class="form-input" name="kecamatan" id="kecamatanSearch" placeholder="Kebon Jeruk, Jakarta Barat" required>
+                <small style="display: block; margin-top: 5px; font-size: 11px; color: #856404; font-style: italic;">
+                    💡 Isi sesuai domisili kendaraan saat ini
+                </small>
             </div>
 
             <div class="form-group">
