--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
                 <label class="form-label">Domisili Saat Ini (Kecamatan) <span class="required">*</span></label>
                 <input type="text" class="form-input" name="kecamatan" id="kecamatanSearch" placeholder="Kebon Jeruk, Jakarta Barat" required>
                 <small style="display: block; margin-top: 5px; font-size: 11px; color: #fff3cd; font-style: italic;">
-                    💡 Isi sesuai domisili kendaraan saat ini
+                    💡 Isi sesuai domisili Anda saat ini
                 </small>
             </div>
 
