--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
 
             <div class="form-note" style="background: #fff3cd; padding: 15px; border-radius: 8px; margin-bottom: 20px; border-left: 4px solid #ffc107;">
                 <p style="font-size: 13px; margin: 0; color: #856404;">
-                    📸 <strong>Catatan:</strong> Foto BPKB, STNK, dan kendaraan akan diminta melalui WhatsApp setelah pengajuan dikirim.
+                    📸 <strong>Catatan:</strong> Foto STNK kendaraan akan diminta melalui WhatsApp setelah pengajuan dikirim.
                 </p>
             </div>
 
