--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
     <link rel="preconnect" href="https://wa.me">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://script.google.com">
+    <link rel="dns-prefetch" href="//script.google.com">
+
 </head>
 <body>
 
