--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Pinjaman dana cepat dengan jaminan BPKB mobil, motor & truk. Bunga mulai 0.79% per bulan. Proses cepat, cair 1-3 hari.">
 
     <link rel="preconnect" href="https://wa.me">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css?v=1.0.3">
     <link rel="preconnect" href="https://script.google.com">
     <link rel="dns-prefetch" href="//script.google.com">
 
