--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
 
     <title>Butuh Dana Cepat? Gadai BPKB Mobil Seluruh Indonesia | Bunga 0.79%</title>
     <meta name="description" content="Pinjaman dana cepat dengan jaminan BPKB mobil, motor & truk. Bunga mulai 0.79% per bulan. Proses cepat, cair 1-3 hari.">
-
+    <meta property="og:title" content="Gadai BPKB Mobil Cair Cepat">
+    <meta property="og:description" content="Proses mudah, tanpa ribet, survei cepat.">
+    <meta property="og:image" content="https://gadaibpkbmobil.com/preview.jpg">
+    <meta property="og:type" content="website">
+    
     <link rel="preconnect" href="https://wa.me">
     <link rel="stylesheet" href="css/styles.css?v=1.0.3">
     <link rel="preconnect" href="https://script.google.com">
     <link rel="dns-prefetch" href="//script.google.com">
+    <link rel="canonical" href="https://gadaibpkbmobil.com/">
+
 
 </head>
 <body>
@@ -732,7 +738,7 @@
 </div>
 
 
-<script src="js/script.js"></script>
+<script src="js/script.js" defer></script>
 
 </body>
 </html>
