--- a/index.html
+++ b/index.html
@@ -10,12 +10,27 @@
     <meta property="og:description" content="Proses mudah, tanpa ribet, survei cepat.">
     <meta property="og:image" content="https://gadaibpkbmobil.com/preview.jpg">
     <meta property="og:type" content="website">
+    <meta property="og:url" content="https://gadaibpkbmobil.com/">
+    <meta name="theme-color" content="#004990">
     
     <link rel="preconnect" href="https://wa.me">
     <link rel="stylesheet" href="css/styles.css?v=1.0.3">
     <link rel="preconnect" href="https://script.google.com">
     <link rel="dns-prefetch" href="//script.google.com">
     <link rel="canonical" href="https://gadaibpkbmobil.com/">
+    <link rel="preload" href="assets/gbml.webp" as="image">
+    <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
+
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FinancialService",
+  "name": "GadaiBPKBmobil.com",
+  "url": "https://gadaibpkbmobil.com/",
+  "description": "Pinjaman dana cepat dengan jaminan BPKB mobil, motor & truk.",
+  "areaServed": "Indonesia"
+}
+</script>
 
 
 </head>
@@ -25,7 +40,7 @@
 
     <header>
         <div class="logo">
-            <img src="assets/logo.webp" alt="GadaiBPKBmobil.com Logo" loading="lazy">
+            <img src="assets/logo.webp" alt="GadaiBPKBmobil.com Logo">
         </div>
         <div style="display: flex; flex-direction: column; align-items: flex-end; gap: 5px;">
             <div class="social-proof">
@@ -57,7 +72,7 @@
             </div>
         </div>
 
-        <button class="btn-cta-hero">Hitung Simulasi Gratis</button>
+        <button class="btn-cta-hero" id="ctaHero">Hitung Simulasi Gratis</button>
 
         <div class="hero-image">
             <img src="assets/gbml.webp" alt="Happy Family with Car" loading="lazy">
@@ -474,7 +489,7 @@
                 <div class="benefit-desc">Untuk segala kebutuhan</div>
             </div>
         </div>
-        <button class="btn-cta-hero">Hitung Simulasi Gratis</button>
+        <button class="btn-cta-hero" id="ctaHero">Hitung Simulasi Gratis</button>
     </section>
 
     <section class="section">
