--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     <link rel="preload" href="assets/gbml.webp" as="image">
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
 
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
+    <link rel="shortcut icon" href="assets/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
+
     <script type="application/ld+json">
 {
   "@context": "https://schema.org",
