--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#004990">
     
     <link rel="preconnect" href="https://wa.me">
-    <link rel="stylesheet" href="css/styles.css?v=1.0.4">
+    <link rel="stylesheet" href="css/styles.css?v=1.0.5">
     <link rel="preconnect" href="https://script.google.com">
     <link rel="dns-prefetch" href="//script.google.com">
     <link rel="canonical" href="https://gadaibpkbmobil.com/">
@@ -80,7 +80,7 @@
         <button class="btn-cta-hero" id="ctaHero">Hitung Simulasi Gratis</button>
 
         <div class="hero-image">
-            <img src="assets/gbml.webp" alt="Happy Family with Car" loading="lazy">
+            <img src="assets/header.webp" alt="Happy Family with Car" loading="lazy">
         </div>
     </section>
 
