--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#004990">
     
     <link rel="preconnect" href="https://wa.me">
-    <link rel="stylesheet" href="css/styles.css?v=1.0.5">
+    <link rel="stylesheet" href="css/styles.css?v=1.0.6">
     <link rel="preconnect" href="https://script.google.com">
     <link rel="dns-prefetch" href="//script.google.com">
     <link rel="canonical" href="https://gadaibpkbmobil.com/">
@@ -164,7 +164,7 @@
                 <div class="slider-slide">
                     <div class="promo-slide">
                         <div class="promo-img">
-                            <img src="images/promo-usaha.jpg" alt="Usaha" loading="lazy">
+                            <img src="assets/modal.webp" alt="Usaha" loading="lazy">
                         </div>
                         <h3 style="font-size: 16px; margin-bottom: 10px;">Solusi Dana untuk<br><strong>Modal Usaha</strong></h3>
                         <p style="font-size: 12px; color: #666; margin-bottom: 20px;">
