--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#004990">
     
     <link rel="preconnect" href="https://wa.me">
-    <link rel="stylesheet" href="css/styles.css?v=1.0.7">
+    <link rel="stylesheet" href="css/styles.css?v=1.0.8">
     <link rel="preconnect" href="https://script.google.com">
     <link rel="dns-prefetch" href="//script.google.com">
     <link rel="canonical" href="https://gadaibpkbmobil.com/">
@@ -194,7 +194,7 @@
                 <div class="slider-slide">
                     <div class="promo-slide">
                         <div class="promo-img">
-                            <img src="images/promo-rumah.jpg" alt="Rumah" loading="lazy">
+                            <img src="assets/rumah.webp" alt="Rumah" loading="lazy">
                         </div>
                         <h3 style="font-size: 16px; margin-bottom: 10px;">Solusi Dana untuk<br><strong>Renovasi Rumah</strong></h3>
                         <p style="font-size: 12px; color: #666; margin-bottom: 20px;">
@@ -224,7 +224,7 @@
                 <div class="slider-slide">
                     <div class="promo-slide">
                         <div class="promo-img">
-                            <img src="images/promo-kesehatan.jpg" alt="Kesehatan" loading="lazy">
+                            <img src="assets/kesehatan.webp" alt="Kesehatan" loading="lazy">
                         </div>
                         <h3 style="font-size: 16px; margin-bottom: 10px;">Solusi Dana untuk<br><strong>Biaya Kesehatan</strong></h3>
                         <p style="font-size: 12px; color: #666; margin-bottom: 20px;">
@@ -267,7 +267,7 @@
                         <div class="ribbon-badge">Best Offer</div>
                         <div class="car-preview">
                             <div class="car-img">
-                                <img src="images/car-avanza.jpg" alt="Toyota Avanza" loading="lazy">
+                                <img src="assetss/avanza.webp" alt="Toyota Avanza" loading="lazy">
                             </div>
                         </div>
                         <div class="sim-header">Toyota Avanza 2018</div>
@@ -313,7 +313,7 @@
                         <div class="ribbon-badge">Best Offer</div>
                         <div class="car-preview">
                             <div class="car-img">
-                                <img src="images/car-innova.jpg" alt="Toyota Innova" loading="lazy">
+                                <img src="assets/innova.webp" alt="Toyota Innova" loading="lazy">
                             </div>
                         </div>
                         <div class="sim-header">Toyota Innova 2019</div>
@@ -359,7 +359,7 @@
                         <div class="ribbon-badge">Best Offer</div>
                         <div class="car-preview">
                             <div class="car-img">
-                                <img src="images/car-xpander.jpg" alt="Mitsubishi Xpander" loading="lazy">
+                                <img src="assets/xpander.webp" alt="Mitsubishi Xpander" loading="lazy">
                             </div>
                         </div>
                         <div class="sim-header">Mitsubishi Xpander 2020</div>
