--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#004990">
     
     <link rel="preconnect" href="https://wa.me">
-    <link rel="stylesheet" href="css/styles.css?v=1.0.9">
+    <link rel="stylesheet" href="css/styles.css?v=1.1.1">
     <link rel="preconnect" href="https://script.google.com">
     <link rel="dns-prefetch" href="//script.google.com">
     <link rel="canonical" href="https://gadaibpkbmobil.com/">
@@ -267,7 +267,7 @@
                         <div class="ribbon-badge">Best Offer</div>
                         <div class="car-preview">
                             <div class="car-img">
-                                <img src="assetss/avanza.webp" alt="Toyota Avanza" loading="lazy">
+                                <img src="assets/avanza.webp" alt="Toyota Avanza" loading="lazy">
                             </div>
                         </div>
                         <div class="sim-header">Toyota Avanza 2018</div>
