--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#004990">
     
     <link rel="preconnect" href="https://wa.me">
-    <link rel="stylesheet" href="css/styles.css?v=1.1.3">
+    <link rel="stylesheet" href="css/styles.css?v=1.1.4">
     <link rel="preconnect" href="https://script.google.com">
     <link rel="dns-prefetch" href="//script.google.com">
     <link rel="canonical" href="https://gadaibpkbmobil.com/">
@@ -751,10 +751,14 @@
         <p style="margin-top: 30px; text-align: center; font-size: 10px; opacity: 0.7;">&copy; 2026 Copyright GadaiBPKBmobil.com</p>
     </footer>
 
-    <a href="#" class="wa-float">
-        <span>📞</span> 
-    </a>
-
+    
+<div class="bottom-action-bar">
+  <a href="#formSection" class="btn-bottom btn-simulasi">
+    📊 Hitung Simulasi
+  </a>
+  <a href="https://wa.me/6282299999036" class="btn-bottom btn-wa" target="_blank">
+    🟢 WhatsApp
+  </a>
 </div>
 
 
