--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#004990">
     
     <link rel="preconnect" href="https://wa.me">
-    <link rel="stylesheet" href="css/styles.css?v=1.1.9">
+    <link rel="stylesheet" href="css/styles.css?v=1.2.0">
     <link rel="preconnect" href="https://script.google.com">
     <link rel="dns-prefetch" href="//script.google.com">
     <link rel="canonical" href="https://gadaibpkbmobil.com/">
@@ -559,7 +559,7 @@
         </div>
     </section>
 
-    <section class="form-section">
+    <section class="form-section" id="formSection">
         <h2>Hitung Simulasi Cepat. GRATIS!</h2>
         <p>Isi form di bawah ini. Simulasi terkirim dalam waktu 1-2 menit.</p>
 
@@ -761,7 +761,7 @@
     
 <div class="bottom-action-bar">
   <a href="#formSection" class="btn-bottom btn-simulasi">
-    📊 Hitung Simulasi
+    🔢 Hitung Simulasi
   </a>
   <a href="https://wa.me/6282299999036" class="btn-bottom btn-wa" target="_blank">
     🟢 WhatsApp
