--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#004990">
     
     <link rel="preconnect" href="https://wa.me">
-    <link rel="stylesheet" href="css/styles.css?v=1.2.0">
+    <link rel="stylesheet" href="css/styles.css?v=1.2.1">
     <link rel="preconnect" href="https://script.google.com">
     <link rel="dns-prefetch" href="//script.google.com">
     <link rel="canonical" href="https://gadaibpkbmobil.com/">
@@ -763,7 +763,7 @@
   <a href="#formSection" class="btn-bottom btn-simulasi">
     🔢 Hitung Simulasi
   </a>
-  <a href="https://wa.me/6282299999036" class="btn-bottom btn-wa" target="_blank">
+  <a href="https://wa.me/6282299999036" class="btn-bottom btn-wa wa-radar" target="_blank">
     🟢 WhatsApp
   </a>
 </div>
