--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#004990">
     
     <link rel="preconnect" href="https://wa.me">
-    <link rel="stylesheet" href="css/styles.css?v=1.2.2">
+    <link rel="stylesheet" href="css/styles.css?v=1.2.3">
     <link rel="preconnect" href="https://script.google.com">
     <link rel="dns-prefetch" href="//script.google.com">
     <link rel="canonical" href="https://gadaibpkbmobil.com/">
@@ -77,7 +77,7 @@
             </div>
         </div>
 
-        <button class="btn-cta-hero" id="ctaHero">Hitung Simulasi Gratis</button>
+        <button class="btn-cta-hero" cta-scroll">Hitung Simulasi Gratis</button>
 
         <div class="hero-image">
             <img src="assets/header.webp" alt="Happy Family with Car" loading="lazy">
@@ -310,7 +310,7 @@
                                     <span>Derek 24/7</span>
                                 </div>
                             </div>
-                            <button class="btn-cta-hero" style="margin-bottom: 0;">Hitung Simulasi Gratis</button>
+                            <button class="btn-cta-hero cta-scroll" style="margin-bottom: 0;">Hitung Simulasi Gratis</button>
                         </div>
                     </div>
                 </div>
@@ -356,7 +356,7 @@
                                     <span>Derek 24/7</span>
                                 </div>
                             </div>
-                            <button class="btn-cta-hero" style="margin-bottom: 0;">Hitung Simulasi Gratis</button>
+                            <button class="btn-cta-hero cta-scroll" style="margin-bottom: 0;">Hitung Simulasi Gratis</button>
                         </div>
                     </div>
                 </div>
@@ -402,7 +402,7 @@
                                     <span>Derek 24/7</span>
                                 </div>
                             </div>
-                            <button class="btn-cta-hero" style="margin-bottom: 0;">Hitung Simulasi Gratis</button>
+                            <button class="btn-cta-hero cta-scroll" style="margin-bottom: 0;">Hitung Simulasi Gratis</button>
                         </div>
                     </div>
                 </div>
@@ -448,7 +448,7 @@
                                     <span>Derek 24/7</span>
                                 </div>
                             </div>
-                            <button class="btn-cta-hero" style="margin-bottom: 0;">Hitung Simulasi Gratis</button>
+                            <button class="btn-cta-hero cta-scroll" style="margin-bottom: 0;">Hitung Simulasi Gratis</button>
                         </div>
                     </div>
                 </div>
@@ -501,7 +501,7 @@
                 <div class="benefit-desc">Untuk segala kebutuhan</div>
             </div>
         </div>
-        <button class="btn-cta-hero" id="ctaHero">Hitung Simulasi Gratis</button>
+        <button class="btn-cta-hero cta-scroll">Hitung Simulasi Gratis</button>
     </section>
 
     <section class="section">
