--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#004990">
     
     <link rel="preconnect" href="https://wa.me">
-    <link rel="stylesheet" href="css/styles.css?v=1.2.6">
+    <link rel="stylesheet" href="css/styles.css?v=1.2.7">
     <link rel="preconnect" href="https://script.google.com">
     <link rel="dns-prefetch" href="//script.google.com">
     <link rel="canonical" href="https://gadaibpkbmobil.com/">
@@ -78,6 +78,7 @@
         </div>
 
         <button class="btn-cta-hero cta-scroll">Hitung Simulasi Gratis</button>
+        <div class="cta-micro-text" id="seasonMicroText"></div>
 
         <div class="hero-image">
             <img src="assets/header.webp" alt="Happy Family with Car" loading="lazy">
