--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#004990">
     
     <link rel="preconnect" href="https://wa.me">
-    <link rel="stylesheet" href="css/styles.css?v=1.3.1">
+    <link rel="stylesheet" href="css/styles.css?v=1.3.3">
     <link rel="preconnect" href="https://script.google.com">
     <link rel="dns-prefetch" href="//script.google.com">
     <link rel="canonical" href="https://gadaibpkbmobil.com/">
@@ -58,6 +58,15 @@
         </div>
     </header>
 
+    <!-- Seasonal Banner -->
+<div id="seasonBanner" class="season-banner">
+    <div class="season-content">
+        <div class="season-badge">🎉 Event Spesial</div>
+        <div class="season-title" id="seasonTitle"></div>
+        <div class="season-subtitle" id="seasonSubtitle"></div>
+    </div>
+</div>
+    
     <section class="hero">
         <p style="font-size: 10px; opacity: 0.8; letter-spacing: 1px; margin-bottom: 5px;">SOLUSI SEMUA KEBUTUHAN</p>
         <h1>Butuh Dana Cepat?<br>Gadai BPKB <span class="vehicle-slider" id="vehicleSlider">Mobil</span><br><span style="color: #ffd700;">Melayani Seluruh Indonesia</span></h1>
