--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#004990">
     
     <link rel="preconnect" href="https://wa.me">
-    <link rel="stylesheet" href="css/styles.css?v=1.3.3">
+    <link rel="stylesheet" href="css/styles.css?v=1.3.4">
     <link rel="preconnect" href="https://script.google.com">
     <link rel="dns-prefetch" href="//script.google.com">
     <link rel="canonical" href="https://gadaibpkbmobil.com/">
@@ -61,9 +61,12 @@
     <!-- Seasonal Banner -->
 <div id="seasonBanner" class="season-banner">
     <div class="season-content">
-        <div class="season-badge">🎉 Event Spesial</div>
-        <div class="season-title" id="seasonTitle"></div>
-        <div class="season-subtitle" id="seasonSubtitle"></div>
+        <div class="season-text">
+            <div class="season-title"></div>
+            <div class="season-subtext"></div>
+            <div class="season-countdown"></div>
+        </div>
+        <img class="season-image" style="display:none;" />
     </div>
 </div>
     
