--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#004990">
     
     <link rel="preconnect" href="https://wa.me">
-    <link rel="stylesheet" href="css/styles.css?v=1.3.5">
+    <link rel="stylesheet" href="css/styles.css?v=1.3.6">
     <link rel="preconnect" href="https://script.google.com">
     <link rel="dns-prefetch" href="//script.google.com">
     <link rel="canonical" href="https://gadaibpkbmobil.com/">
@@ -58,17 +58,31 @@
         </div>
     </header>
 
-    <!-- Seasonal Banner -->
+    <!-- ===== SEASONAL BANNER ===== -->
 <div id="seasonBanner" class="season-banner">
     <div class="season-content">
-        <div class="season-text">
-            <div class="season-title"></div>
-            <div class="season-subtext"></div>
-            <div class="season-countdown"></div>
-        </div>
-        <img class="season-image" style="display:none;" />
+        <div class="season-badge">🎉 Event Spesial</div>
+        <div class="season-title" id="seasonTitle"></div>
+        <div class="season-subtitle" id="seasonSubtitle"></div>
     </div>
 </div>
+<!-- ============================ -->
+
+    <!-- ===== DEFAULT BANNER ===== -->
+<div id="defaultBanner" class="default-banner">
+    <div class="default-content">
+        <div class="default-text">
+            <div class="default-title">
+                Promo Spesial Hari Ini
+            </div>
+            <div class="default-subtitle">
+                Simulasi cepat & proses lebih prioritas
+            </div>
+        </div>
+        <img src="/assets/banner-default.webp" class="default-image" />
+    </div>
+</div>
+<!-- ============================ -->
     
     <section class="hero">
         <p style="font-size: 10px; opacity: 0.8; letter-spacing: 1px; margin-bottom: 5px;">SOLUSI SEMUA KEBUTUHAN</p>
