--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#004990">
     
     <link rel="preconnect" href="https://wa.me">
-    <link rel="stylesheet" href="css/styles.css?v=1.3.7">
+    <link rel="stylesheet" href="css/styles.css?v=1.3.8">
     <link rel="preconnect" href="https://script.google.com">
     <link rel="dns-prefetch" href="//script.google.com">
     <link rel="canonical" href="https://gadaibpkbmobil.com/">
@@ -79,7 +79,7 @@
                 Simulasi cepat & proses lebih prioritas
             </div>
         </div>
-        <img src="/assets/banner-default.webp" class="default-image" />
+        <img src="/assets/ramadan.webp" alt="Ramadan" loading="lazy" class="default-image" />
     </div>
 </div>
 <!-- ============================ -->
