--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#004990">
     
     <link rel="preconnect" href="https://wa.me">
-    <link rel="stylesheet" href="css/styles.css?v=1.4.0">
+    <link rel="stylesheet" href="css/styles.css?v=1.4.1">
     <link rel="preconnect" href="https://script.google.com">
     <link rel="dns-prefetch" href="//script.google.com">
     <link rel="canonical" href="https://gadaibpkbmobil.com/">
@@ -122,18 +122,9 @@
         <h2 class="section-title">BPKB Jadi Duit, Proses Gak Ribet</h2>
         
         <!-- Phone Mockup - Normal Image -->
-        <div class="iphone-mockup">
-  <div class="iphone-frame">
-    <div class="iphone-screen">
-      <div class="iphone-slider" id="iphoneSlider">
-        <img src="/assets/phone/slide1.webp" alt="Cek Estimasi Pencairan">
-        <img src="/assets/phone/slide2.webp" alt="Pastikan Data Sudah Benar">
-        <img src="/assets/phone/slide3.webp" alt="Pengajuan Diproses">
-        <img src="/assets/phone/slide4.webp" alt="Pencairan">
-      </div>
-    </div>
-  </div>
-</div>
+        <div class="phone-mockup">
+            <img src="images/phone-mockup.jpg" alt="Phone App" loading="lazy">
+        </div>
 
         <!-- Timeline Steps -->
         <div class="steps-timeline">
@@ -141,7 +132,7 @@
                 <div class="step-num">1</div>
                 <div class="step-text">
                     <h4>Cek Estimasi Pencairan</h4>
-                    <p>Isi formulir singkat hanya 30 detik.</p>
+                    <p>Isi formulir singkat hanya 45 detik.</p>
                 </div>
             </div>
             <div class="step-item">
