--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#004990">
     
     <link rel="preconnect" href="https://wa.me">
-    <link rel="stylesheet" href="css/styles.css?v=1.4.1">
+    <link rel="stylesheet" href="css/styles.css?v=1.4.2">
     <link rel="preconnect" href="https://script.google.com">
     <link rel="dns-prefetch" href="//script.google.com">
     <link rel="canonical" href="https://gadaibpkbmobil.com/">
@@ -36,7 +36,6 @@
   "areaServed": "Indonesia"
 }
 </script>
-
 
 </head>
 <body>
@@ -122,9 +121,17 @@
         <h2 class="section-title">BPKB Jadi Duit, Proses Gak Ribet</h2>
         
         <!-- Phone Mockup - Normal Image -->
-        <div class="phone-mockup">
-            <img src="images/phone-mockup.jpg" alt="Phone App" loading="lazy">
-        </div>
+       <div class="modern-phone">
+  <div class="modern-phone-frame">
+    <div class="modern-phone-screen">
+      <div class="modern-phone-slider" id="modernPhoneSlider">
+        <img src="/assets/phone/slide1.webp">
+        <img src="/assets/phone/slide2.webp">
+        <img src="/assets/phone/slide3.webp">
+      </div>
+    </div>
+  </div>
+</div>
 
         <!-- Timeline Steps -->
         <div class="steps-timeline">
