--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#004990">
     
     <link rel="preconnect" href="https://wa.me">
-    <link rel="stylesheet" href="css/styles.css?v=1.4.2">
+    <link rel="stylesheet" href="css/styles.css?v=1.4.3">
     <link rel="preconnect" href="https://script.google.com">
     <link rel="dns-prefetch" href="//script.google.com">
     <link rel="canonical" href="https://gadaibpkbmobil.com/">
@@ -121,16 +121,12 @@
         <h2 class="section-title">BPKB Jadi Duit, Proses Gak Ribet</h2>
         
         <!-- Phone Mockup - Normal Image -->
-       <div class="modern-phone">
-  <div class="modern-phone-frame">
-    <div class="modern-phone-screen">
-      <div class="modern-phone-slider" id="modernPhoneSlider">
-        <img src="/assets/phone/slide1.webp">
-        <img src="/assets/phone/slide2.webp">
-        <img src="/assets/phone/slide3.webp">
-      </div>
+       <div class="portrait-slider-wrapper">
+    <div class="portrait-slider" id="portraitSlider">
+        <img src="/assets/phone/slide1.webp" alt="">
+        <img src="/assets/phone/slide2.webp" alt="">
+        <img src="/assets/phone/slide3.webp" alt="">
     </div>
-  </div>
 </div>
 
         <!-- Timeline Steps -->
