--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#004990">
     
     <link rel="preconnect" href="https://wa.me">
-    <link rel="stylesheet" href="css/styles.css?v=1.4.3">
+    <link rel="stylesheet" href="css/styles.css?v=1.4.5">
     <link rel="preconnect" href="https://script.google.com">
     <link rel="dns-prefetch" href="//script.google.com">
     <link rel="canonical" href="https://gadaibpkbmobil.com/">
@@ -123,9 +123,10 @@
         <!-- Phone Mockup - Normal Image -->
        <div class="portrait-slider-wrapper">
     <div class="portrait-slider" id="portraitSlider">
-        <img src="/assets/phone/slide1.webp" alt="">
-        <img src="/assets/phone/slide2.webp" alt="">
-        <img src="/assets/phone/slide3.webp" alt="">
+        <img src="/assets/satuu.webp" alt="Cek Estimasi Pencairan" loading="lazy">
+        <img src="/assets/duaa.webp" alt="Pastikan Data Sudah Benar" loading="lazy">
+        <img src="/assets/tigaa.webp" alt="Pengajuan Diproses" loading="lazy">
+        <img src="/assets/empatt.webp" alt="Pencairan" loading="lazy">
     </div>
 </div>
 
