--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#004990">
     
     <link rel="preconnect" href="https://wa.me">
-    <link rel="stylesheet" href="css/styles.css?v=1.5.0">
+    <link rel="stylesheet" href="css/styles.css?v=1.5.1">
     <link rel="preconnect" href="https://script.google.com">
     <link rel="dns-prefetch" href="//script.google.com">
     <link rel="canonical" href="https://gadaibpkbmobil.com/">
@@ -121,15 +121,19 @@
         <h2 class="section-title">BPKB Jadi Duit, Proses Gak Ribet</h2>
         
         <!-- Phone Mockup - Normal Image -->
-       <div class="portrait-slider-wrapper">
-    <div class="portrait-slider" id="portraitSlider">
-        <img src="/assets/satuu.webp" alt="Cek Estimasi Pencairan" loading="lazy">
-        <img src="/assets/duaa.webp" alt="Pastikan Data Sudah Benar" loading="lazy">
-        <img src="/assets/tigaa.webp" alt="Pengajuan Diproses" loading="lazy">
-        <img src="/assets/empatt.webp" alt="Pencairan" loading="lazy">
-    </div>
-</div>
+       <div class="phone-wrapper">
 
+    <!-- Screen content -->
+    <div class="phone-screen-slider" id="phoneScreenSlider">
+      <img src="assets/duaa.webp" alt="Step 1" loading="lazy">
+      <img src="assets/tigaa.webp" alt="Step 2" loading="lazy">
+      <img src="assets/empat.webp" alt="Step 3" loading="lazy">
+    </div>
+
+    <!-- Static Phone Frame -->
+    <img src="assets/satuu.webp" class="phone-frame" alt="Phone Frame" loading="lazy">
+
+  </div>
         <!-- Timeline Steps -->
         <div class="steps-timeline">
             <div class="step-item">
