--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#004990">
     
     <link rel="preconnect" href="https://wa.me">
-    <link rel="stylesheet" href="css/styles.css?v=1.5.5">
+    <link rel="stylesheet" href="css/styles.css?v=1.5.6">
     <link rel="preconnect" href="https://script.google.com">
     <link rel="dns-prefetch" href="//script.google.com">
     <link rel="canonical" href="https://gadaibpkbmobil.com/">
@@ -125,14 +125,14 @@
 
     <!-- Screen content -->
     <div class="phone-screen-slider" id="phoneScreenSlider">
-      <img src="assets/satuu.webp" alt="Step 1" loading="lazy">
-      <img src="assets/duaa.webp" alt="Step 2" loading="lazy">
-      <img src="assets/tigaa.webp" alt="Step 3" loading="lazy">
-      <img src="assets/empatt.webp" alt="Step 4" loading="lazy">
+      <img src="assets/one.webp" alt="Step 1" loading="lazy">
+      <img src="assets/two.webp" alt="Step 2" loading="lazy">
+      <img src="assets/three.webp" alt="Step 3" loading="lazy">
+      <img src="assets/four.webp" alt="Step 4" loading="lazy">
     </div>
 
     <!-- Static Phone Frame -->
-    <img src="assets/frame.webp" class="phone-frame" alt="Phone Frame" loading="lazy">
+    <img src="assets/fraame.webp" class="phone-frame" alt="Phone Frame" loading="lazy">
 
   </div>
         <!-- Timeline Steps -->
