--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#004990">
     
     <link rel="preconnect" href="https://wa.me">
-    <link rel="stylesheet" href="css/styles.css?v=1.5.6">
+    <link rel="stylesheet" href="css/styles.css?v=1.5.7">
     <link rel="preconnect" href="https://script.google.com">
     <link rel="dns-prefetch" href="//script.google.com">
     <link rel="canonical" href="https://gadaibpkbmobil.com/">
@@ -122,19 +122,18 @@
         
         <!-- Phone Mockup - Normal Image -->
        <div class="phone-wrapper">
-
-    <!-- Screen content -->
-    <div class="phone-screen-slider" id="phoneScreenSlider">
-      <img src="assets/one.webp" alt="Step 1" loading="lazy">
-      <img src="assets/two.webp" alt="Step 2" loading="lazy">
-      <img src="assets/three.webp" alt="Step 3" loading="lazy">
-      <img src="assets/four.webp" alt="Step 4" loading="lazy">
-    </div>
-
-    <!-- Static Phone Frame -->
-    <img src="assets/fraame.webp" class="phone-frame" alt="Phone Frame" loading="lazy">
-
+  
+  <div class="phone-screen">
+      <img src="assets/one.webp" class="phone-slide active" alt="Phone Frame" loading="lazy">
+      <img src="assets/two.webp" class="phone-slide" alt="Phone Frame" loading="lazy">
+      <img src="assets/three.webp" class="phone-slide" alt="Phone Frame" loading="lazy">
+      <img src="assets/four.webp" class="phone-slide" alt="Phone Frame" loading="lazy">
   </div>
+
+  <img src="assets/framer.webp" class="phone-frame" alt="Phone Frame" loading="lazy">
+
+</div>
+
         <!-- Timeline Steps -->
         <div class="steps-timeline">
             <div class="step-item">
